adjustes and updates

--- a/login/login.html
+++ b/login/login.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="pw-sorvetes pwb">
-                    <label id="" for="senha">Senha</label>
+                    <label id="senhaLabel" for="senha">Senha</label>
                     <input type="password" id="senha" placeholder="Digite sua senha" required>
                 </div>
 
